added: password var to env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
+# For interacting with OpenAI
 OPENAI_API_KEY=
 
+# Basic auth password (not needed locally. But should be defined in live environment if you want password protection)
+CFP_PASSWORD=
